syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package cosmosgov_grpc;

option go_package = "go/vote_permission_service";

service VotePermissionService {
  rpc GetSupportedChains (google.protobuf.Empty) returns (GetSupportedChainsResponse) {}
  rpc CreateVotePermission (CreateVotePermissionRequest) returns (CreateVotePermissionResponse) {}
  rpc GetVotePermissions (google.protobuf.Empty) returns (GetVotePermissionsResponse) {}
  rpc RefreshVotePermission (RefreshVotePermissionRequest) returns (RefreshVotePermissionResponse) {}
}

message Chain {
  string chainId = 1;
  string displayName = 2;
  string rpcAddress = 3;
  string grantee = 4;
}

message GetSupportedChainsResponse {
  repeated Chain chains = 1;
}

message CreateVotePermissionRequest {
  VotePermission votePermission = 1;
}

message CreateVotePermissionResponse {
  VotePermission votePermission = 1;
}

message VotePermission {
  string chainName = 1;
  string granter = 2;
  string grantee = 3;
  google.protobuf.Timestamp expires_at = 4;
}

message GetVotePermissionsResponse {
  repeated VotePermission votePermissions = 1;
}

message RefreshVotePermissionRequest {
  VotePermission votePermission = 1;
}

message RefreshVotePermissionResponse {
  VotePermission votePermission = 1;
}

